--- a/scss/editor/_editor.scss
+++ b/scss/editor/_editor.scss
@@ -1,13 +1,14 @@
-@use 'aside';
-@use 'callouts/callouts';
-@use 'code/code';
-@use 'image';
-@use 'embeds/embeds';
-@use 'footnotes';
-@use 'headings/headings';
-@use 'horizontal_rule';
-@use 'links/link';
-@use 'lists/lists';
-@use 'properties';
-@use 'search-highlight';
-@use 'tables/tables';
+@use "aside";
+@use "callouts/callouts";
+@use "code/code";
+@use "compact";
+@use "image";
+@use "embeds/embeds";
+@use "footnotes";
+@use "headings/headings";
+@use "horizontal_rule";
+@use "links/link";
+@use "lists/lists";
+@use "properties";
+@use "search-highlight";
+@use "tables/tables";
