--- a/publish.css
+++ b/publish.css
@@ -5541,8 +5541,8 @@ body {
   z-index: -1;
 }
 
-.fas-bg-textures.theme-dark .workspace-leaf-content[data-type=file-explorer]::before {
-  mix-blend-mode: var(--file-explorer-decoration-blend-dark);
+.fas-bg-textures.theme-dark {
+  --file-explorer-decoration-blend: var(--file-explorer-decoration-blend-dark);
 }
 
 .fas-bg-textures:not(.fas-file-explorer-decoration-custom) .workspace-leaf-content[data-type=file-explorer]::before {
@@ -5589,8 +5589,8 @@ body {
   background-position: var(--sidebar-texture-position);
 }
 
-.fas-bg-textures.theme-dark .mod-sidedock .workspace-leaf {
-  background-blend-mode: normal, var(--sidebar-texture-blend-dark);
+.fas-bg-textures.theme-dark {
+  --sidebar-texture-blend: var(--sidebar-texture-blend-dark);
 }
 
 body {
