Add page-break callout

--- a/scss/editor/callouts/_callouts.scss
+++ b/scss/editor/callouts/_callouts.scss
@@ -16,6 +16,7 @@
 @use "callout-full-width-image";
 @use "callout-letter";
 @use "callout-masonry";
+@use "callout-page-break";
 @use "callout-paper-fold";
 @use "callout-pinned";
 @use "callout-poem";
