--- a/scss/window/_tab-headers.scss
+++ b/scss/window/_tab-headers.scss
@@ -61,7 +61,7 @@ body:not(.is-frameless) .mod-root .workspace-tab-header:not(.is-active) .workspa
 @scope (.mod-root .workspace-tabs:not(.mod-stacked)) {
     .workspace-tab-header.is-active {
         background: none;
-        filter: drop-shadow(4px 2px 2px rgba(0, 0, 0, 0.2)) drop-shadow(-4px 2px 2px rgba(0, 0, 0, 0.2));
+        filter: drop-shadow(4px 2px 2px rgba(0, 0, 0, 0.15)) drop-shadow(-4px 2px 2px rgba(0, 0, 0, 0.15));
     }
 
     .is-active .workspace-tab-header-inner {
@@ -92,9 +92,10 @@ body:not(.is-frameless) .mod-root .workspace-tab-header:not(.is-active) .workspa
         position: absolute;
         inset-inline-start: -0.5px;
         width: 1px;
-        background-color: var(--workleaves-background, var(--background-primary));
+        background-color: color-mix(in srgb, var(--workleaves-background, var(--background-primary)), black 10%);
         height: 100%;
-        top: 0;
+        top: 4px;
+        height: 27px;
     }
 }
 
