Pen highlighter effect

--- a/scss/_style-settings.scss
+++ b/scss/_style-settings.scss
@@ -957,6 +957,18 @@ settings:
         format: rgb
         default-light: '#000000'
         default-dark: '#ffffff'
+    - 
+        id: pen-highlighter-effect
+        title: Pen highlighter effect
+        type: variable-select
+        default: disable
+        options:
+            - 
+                value: enable
+                label: Enable
+            - 
+                value: disable
+                label: Disable
 
 
 
