--- a/scss/editor/_editor.scss
+++ b/scss/editor/_editor.scss
@@ -6,6 +6,7 @@
 @use "embeds/embeds";
 @use "footnotes";
 @use "headings/headings";
+@use "highlight";
 @use "horizontal_rule";
 @use "links/link";
 @use "lists/lists";
