Improve compatibility for page breaks callout and add some new metadata

--- a/scss/_style-settings.scss
+++ b/scss/_style-settings.scss
@@ -1260,6 +1260,9 @@ settings:
                 value: fas-skin-art-deco
                 label: Art Deco
             - 
+                value: fas-skin-medieval
+                label: Medieval
+            - 
                 value: fas-skin-sci-fi
                 label: Sci-fi (wip)
 
