--- a/scss/editor/callouts/_callout-autopsy.scss
+++ b/scss/editor/callouts/_callout-autopsy.scss
@@ -91,8 +91,8 @@
 
     .callout {
         /* NESTED CALLOUTS */
-        --callout-border-width: 0;
-        --callout-radius: 0;
+        --callout-border-width: 0px;
+        --callout-radius: 0px;
         --callout-color: var(--callout-color-nested);
         --callout-title-color: var(--callout-color-nested);
         --callout-padding: var(--size-4-5) var(--size-4-3);
