Add decoration above page break for the art deco skin

--- a/scss/skins/_art-deco.scss
+++ b/scss/skins/_art-deco.scss
@@ -21,6 +21,7 @@
     --art-deco-corner-bottom-right: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' version='1.1' xml:space='preserve' xmlns='http://www.w3.org/2000/svg' xmlns:svg='http://www.w3.org/2000/svg'%3E%3Cg transform='translate(-40.612917,-83.589496)'%3E%3Cg transform='matrix(0.30334715,0,0,-0.30338915,28.293104,148.76876)' style='fill:none;stroke:%23000000;stroke-width:1.7443;'%3E%3Cpath d='M 171.59602,116.47005 A 32.748245,32.748245 0 0 1 138.84811,83.879621' /%3E%3Cpath d='M 171.61279,121.24895 A 37.527149,37.527149 0 0 1 134.06919,83.8863' /%3E%3Cpath d='m 40.612917,89.673823 125.163343,-10e-7 V 214.83716' /%3E%3Cpath d='M 154.16388,83.854096 V 101.28619 H 128.32241' /%3E%3Cpath d='m 84.85534,89.673823 v 4.818481 h 50.79229' /%3E%3Cpath d='M 171.59598,149.44348 V 83.854099 l -65.58938,-1e-6' /%3E%3Cpath d='m 171.59598,101.2862 h -17.43209 v 25.84147' /%3E%3Cpath d='m 165.77626,170.59474 h -4.81848 v -50.79229' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
 
     --art-deco-corner-2-bottom-left: url("data:image/svg+xml,%0A%3Csvg width='10.010233mm' height='10.000001mm' viewBox='0 0 10.010233 10.000001' version='1.1' xml:space='preserve' xmlns='http://www.w3.org/2000/svg' xmlns:svg='http://www.w3.org/2000/svg'%3E%3Cg transform='translate(-43.041955,-72.351599)'%3E%3Cg style='fill:%23000000;stroke:none;stroke-width:0.352777;' %3E%3Cpath d='m 43.055014,79.254085 a 3.083998,3.083998 0 0 1 2.183661,0.909066 3.083998,3.083998 0 0 1 0.897482,2.188449 l -3.083968,-0.01352 z' /%3E%3Cpath d='m 90.153341,24.651649 c 0.353049,0.168168 0.677565,0.396757 0.959195,0.678561 l 1.756148,-1.750302 a 5.9424839,5.9424839 0 0 0 -1.64543,-1.166015 z' transform='rotate(45)' /%3E%3Cpath d='m -84.450425,23.579908 -1.760899,1.755053 -0.0062,-0.0062 c -0.2795,-0.278989 -0.601586,-0.505046 -0.951156,-0.672715 l 1.072471,-2.242507 a 5.9424839,5.9424839 0 0 1 1.645796,1.166381 z' transform='matrix(-0.70710678,-0.70710678,-0.70710678,0.70710678,0,0)' /%3E%3C/g%3E%3Cg style='fill:none;stroke:%23000000;stroke-width:0.264583px;stroke-opacity:1'%3E%3Cpath d='m 43.18448,72.351599 v 9.867709 h 9.867708' /%3E%3Cpath d='m 48.788652,77.973661 0.66312,0.66312 -4.149571,2.395755 -0.883202,-1.068339 2.32799,-4.032198 0.669941,0.66994' /%3E%3Cpath d='m 49.930474,77.115474 -4.826311,3.754474 -0.474981,-0.717692 3.648277,-4.689794 z' /%3E%3Cpath d='m 46.143402,77.018857 -0.877279,-0.877279 -1.309044,3.659994 1.448601,1.688253 3.836511,-1.372178 -0.869459,-0.869459' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
+    --art-deco-corner-2-bottom-right: url("data:image/svg+xml,%0A%3Csvg width='10.010233mm' height='10.000001mm' viewBox='0 0 10.010233 10.000001' version='1.1' xml:space='preserve' xmlns='http://www.w3.org/2000/svg' xmlns:svg='http://www.w3.org/2000/svg'%3E%3Cg transform='scale(-1,1) translate(-53.041955,-72.351599)'%3E%3Cg style='fill:%23000000;stroke:none;stroke-width:0.352777;' %3E%3Cpath d='m 43.055014,79.254085 a 3.083998,3.083998 0 0 1 2.183661,0.909066 3.083998,3.083998 0 0 1 0.897482,2.188449 l -3.083968,-0.01352 z' /%3E%3Cpath d='m 90.153341,24.651649 c 0.353049,0.168168 0.677565,0.396757 0.959195,0.678561 l 1.756148,-1.750302 a 5.9424839,5.9424839 0 0 0 -1.64543,-1.166015 z' transform='rotate(45)' /%3E%3Cpath d='m -84.450425,23.579908 -1.760899,1.755053 -0.0062,-0.0062 c -0.2795,-0.278989 -0.601586,-0.505046 -0.951156,-0.672715 l 1.072471,-2.242507 a 5.9424839,5.9424839 0 0 1 1.645796,1.166381 z' transform='matrix(-0.70710678,-0.70710678,-0.70710678,0.70710678,0,0)' /%3E%3C/g%3E%3Cg style='fill:none;stroke:%23000000;stroke-width:0.264583px;stroke-opacity:1'%3E%3Cpath d='m 43.18448,72.351599 v 9.867709 h 9.867708' /%3E%3Cpath d='m 48.788652,77.973661 0.66312,0.66312 -4.149571,2.395755 -0.883202,-1.068339 2.32799,-4.032198 0.669941,0.66994' /%3E%3Cpath d='m 49.930474,77.115474 -4.826311,3.754474 -0.474981,-0.717692 3.648277,-4.689794 z' /%3E%3Cpath d='m 46.143402,77.018857 -0.877279,-0.877279 -1.309044,3.659994 1.448601,1.688253 3.836511,-1.372178 -0.869459,-0.869459' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 
     --art-deco-flag: url("data:image/svg+xml,%3Csvg width='34.440971mm' height='48.040325mm' viewBox='0 0 34.440971 48.040324' version='1.1' xml:space='preserve' xmlns='http://www.w3.org/2000/svg' xmlns:svg='http://www.w3.org/2000/svg'%3E%3Cg transform='translate(-52.501418,-100.37747)' style='fill:none;stroke:%23000000;stroke-width:0.705556;'%3E%3Cpath d='m 52.854196,100.37747 v 40.1793 h 16.86771 16.867706 v -40.1793' /%3E%3Crect style='fill:none;fill-opacity:1;stroke:%23000000;stroke-width:0.705585;stroke-linejoin:round;stroke-dasharray:none;paint-order:markers fill stroke' width='10.691207' height='10.691207' x='143.67868' y='45.711376' transform='matrix(0.71168536,0.70249836,-0.71168536,0.70249836,0,0)' /%3E%3Cpath d='m 62.113134,140.55677 -9.258938,-9.13941' /%3E%3Cpath d='m 77.330681,140.55677 9.258931,-9.13941' /%3E%3Cpath d='m 66.328675,144.71787 h 6.786469' /%3E%3Cpath d='m 52.854196,140.55677 4.629465,-4.56971' /%3E%3Cpath d='m 86.589612,140.55677 -4.629466,-4.56971' /%3E%3Cpath d='m 75.234872,138.48801 11.35474,-11.20819' /%3E%3Cpath d='m 52.854196,127.27982 11.354752,11.20819' /%3E%3C/g%3E%3C/svg%3E%0A");
 
@@ -381,6 +382,26 @@ $fwi_sel: "";
             mask-position: center;
             transform: scaleY(-1) translateY(calc(-100% + 6px));
             height: 40px;
+        }
+
+        &::before {
+            --art-deco-color: rgb(var(--callout-color));
+            @include art-deco-gradient();
+            content: "";
+            display: block;
+            position: absolute;
+            left: 0;
+            top: -40px;
+            width: 100%;
+            height: 40px;
+            background-color: rgb(var(--callout-color));
+            mask-image: var(--art-deco-corner-2-bottom-left), var(--art-deco-corner-2-bottom-right);
+            mask-size: 40px;
+            mask-repeat: no-repeat;
+            mask-position:
+                bottom left,
+                bottom right;
+            pointer-events: none;
         }
     }
 
