--- a/scss/cssclasses/_cssclasses.scss
+++ b/scss/cssclasses/_cssclasses.scss
@@ -1,19 +1,20 @@
-@use 'background-image';
-@use 'banner';
-@use 'black-and-white';
-@use 'columns';
-@use 'confidential';
-@use 'footer-img';
-@use 'hide-properties';
-@use 'minimalist';
-@use 'movie-script';
-@use 'newspaper';
-@use 'note-accent';
-@use 'no-title';
-@use 'sci-fi-banner';
-@use 'sci-fi';
-@use 'wide-page';
+@use "background-image";
+@use "banner";
+@use "black-and-white";
+@use "columns";
+@use "compact";
+@use "confidential";
+@use "footer-img";
+@use "hide-properties";
+@use "minimalist";
+@use "movie-script";
+@use "newspaper";
+@use "note-accent";
+@use "no-title";
+@use "sci-fi-banner";
+@use "sci-fi";
+@use "wide-page";
 
-@use 'family-tree';
-@use 'list-reversed';
-@use 'tree-view';
+@use "family-tree";
+@use "list-reversed";
+@use "tree-view";
