--- a/scss/editor/callouts/_callouts-metadata.scss
+++ b/scss/editor/callouts/_callouts-metadata.scss
@@ -149,6 +149,7 @@
 .callout[data-callout-metadata~="table-fixed"] {
     table {
         table-layout: fixed;
+        width: 100%;
     }
 }
 
@@ -162,7 +163,7 @@
 body {
     --callout-handwritten-font: "Lucida Handwriting", "Comic Sans MS", "Brush Script MT", cursive;
     --callout-monospace-font: var(--font-monospace);
-    --callout-sans-serif-font: "Noto";
+    --callout-sans-serif-font: "Noto", "Arial", serif;
 }
 
 .callout[data-callout-metadata~="handwritten"] {
