--- a/snippets/cssclasses/footer-img.css
+++ b/snippets/cssclasses/footer-img.css
@@ -95,6 +95,7 @@ body {
     background-color: black;
     mix-blend-mode: multiply;
     opacity: var(--footer-img-opacity);
+    pointer-events: none;
   }
   [class*=footer-img] > .markdown-preview-section > div:nth-last-child(1 of div.el-p) p {
     margin: 0;
@@ -119,9 +120,6 @@ body {
   }
   .theme-dark [class*=footer-img] > .markdown-preview-section > div:nth-last-child(1 of div.el-p) p {
     background-color: rgb(from var(--footer-img-color) calc(255 - r) calc(255 - g) calc(255 - b));
-  }
-  :is(.footer-background, .footer-bg)[class*=footer-img] > .markdown-preview-section > div:nth-last-child(2) {
-    z-index: -1;
   }
 }
 @media print {
